--- a/alert.html
+++ b/alert.html
@@ -1,9 +1,9 @@
 [
 {
-service:"Attache",
-alertname:"error kayaknya",
-severity:"Critical",
-source:"https://github.com",
-receiver:"SRE",
+"service":"Attache",
+"alertname":"error kayaknya",
+"severity":"Critical",
+"source":"https://github.com",
+"receiver":"SRE",
 }
 ]
